Fix: Navbar behind sidebar

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,9 @@
 
 .search {
   left: auto !important;
+  @media (min-width: 576px) {
+    right: auto !important;
+  }
 }
 
 .sidebar .nav-item .nav-link.active {
